kubernetes/auto-trade-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-trade-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-trade-api
  template:
    metadata:
      labels:
        app: auto-trade-api
    spec:
      containers:
        - name: auto-trade-api
          image: byun618/auto-trade-api:0.0.2-pre3
          args: ['yarn', 'start']
          resources:
            requests:
              cpu: '300m'
              memory: '500Mi'
            limits:
              cpu: '300m'
              memory: '500Mi'
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
