kubernetes/auto-trade-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-trade-api
spec:
  type: 'NodePort'
  selector:
    app: auto-trade-api
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
