kubernetes/auto-trade-api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-trade-api
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - s6napi.duckdns.org
      secretName: auto-trade-api-tls
  rules:
  - host: s6napi.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auto-trade-api
            port:
              number: 3010
